--- a/dev/sass/_bootstrap.scss
+++ b/dev/sass/_bootstrap.scss
@@ -51,5 +51,5 @@
 //@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
 
 // Utility classes
-@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
-@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+//@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
+//@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
