--- a/dev/sass/_header-bootstrap.scss
+++ b/dev/sass/_header-bootstrap.scss
@@ -13,3 +13,5 @@
 @import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
 @import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/navs";
 @import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
+@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
+@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
