--- a/dev/sass/_header.scss
+++ b/dev/sass/_header.scss
@@ -54,7 +54,7 @@
 .lang {
 	font-size:14px;
 	font-weight:300;
-	padding-left: 15px;
+	padding: 10px;
 }
 a.lang{&, &:hover, &focus{text-decoration:none;color:#000;}}
 span.active {
