--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -2243,10 +2243,15 @@ h2, .h2 {
     /* line 153, ../sass/style.scss */
     .footer li span, .footer li a {
       padding: 5px;
-      color: #999999; }
+      color: #999; }
   /* line 158, ../sass/style.scss */
   .footer-stack {
     padding: 10px; }
   /* line 159, ../sass/style.scss */
   .footer-hr {
     border-top: 1px solid #ccc; }
+
+/* line 162, ../sass/style.scss */
+.socseti, .socseti:hover, .socseti:focus {
+  color: #fff;
+  text-decoration: none; }
