--- a/dev/css/meta.css
+++ b/dev/css/meta.css
@@ -3125,7 +3125,7 @@ Main components
   /* line 365, ../sass/_navbar.scss */
   .cd-primary-nav .see-all a {
     /* different style for the See all button on mobile and tablet */
-    color: #69aa6f; }
+    color: #D4AF53; }
   /* line 370, ../sass/_navbar.scss */
   .cd-primary-nav .cd-nav-gallery .cd-nav-item, .cd-primary-nav .cd-nav-icons .cd-nav-item {
     /* items with picture (or icon) and title */
@@ -3287,11 +3287,11 @@ Main components
       transition: color 0.3s, box-shadow 0.3s; }
       /* line 523, ../sass/_navbar.scss */
       .cd-primary-nav > li > a:hover {
-        color: #69aa6f; }
+        color: #D4AF53; }
       /* line 527, ../sass/_navbar.scss */
       .cd-primary-nav > li > a.selected {
-        color: #69aa6f;
-        box-shadow: inset 0 -2px 0 #69aa6f; }
+        color: #D4AF53;
+        box-shadow: inset 0 -2px 0 #D4AF53; }
     /* line 533, ../sass/_navbar.scss */
     .cd-primary-nav .go-back, .cd-primary-nav .see-all {
       display: none; }
@@ -3382,7 +3382,7 @@ Main components
       /* line 618, ../sass/_navbar.scss */
       .cd-primary-nav .cd-secondary-nav > li > a {
         /* secondary nav title */
-        color: #69aa6f;
+        color: #D4AF53;
         font-weight: bold;
         font-size: 1.6rem;
         margin-bottom: .6em; }
@@ -3396,7 +3396,7 @@ Main components
       font-size: 1.4rem; }
       /* line 635, ../sass/_navbar.scss */
       .cd-primary-nav .cd-secondary-nav a:hover {
-        color: #69aa6f; }
+        color: #D4AF53; }
     /* line 640, ../sass/_navbar.scss */
     .cd-primary-nav .cd-secondary-nav ul {
       /* Force Hardware Acceleration in WebKit */
@@ -3462,7 +3462,7 @@ Main components
         margin-bottom: .6em; }
       /* line 702, ../sass/_navbar.scss */
       .cd-primary-nav .cd-nav-gallery .cd-nav-item h3 {
-        color: #69aa6f;
+        color: #D4AF53;
         font-weight: bold;
         padding: 0 .4em; }
     /* line 711, ../sass/_navbar.scss */
@@ -3487,7 +3487,7 @@ Main components
         background: #f6f6f5; }
       /* line 733, ../sass/_navbar.scss */
       .cd-primary-nav .cd-nav-icons .cd-nav-item h3 {
-        color: #69aa6f;
+        color: #D4AF53;
         font-weight: bold; }
       /* line 738, ../sass/_navbar.scss */
       .cd-primary-nav .cd-nav-icons .cd-nav-item p {
@@ -3531,7 +3531,7 @@ Main components
       background: #c9cbc4; }
     /* line 780, ../sass/_navbar.scss */
     .has-children > a:hover::before, .has-children > a:hover::after, .go-back a:hover::before, .go-back a:hover::after {
-      background: #69aa6f; } }
+      background: #D4AF53; } }
 
 /* line 786, ../sass/_navbar.scss */
 .has-children > a {
@@ -3694,7 +3694,7 @@ Main components
   top: 0;
   left: 0;
   cursor: pointer;
-  background-color: rgba(105, 170, 111, 0.8);
+  background-color: rgba(212, 175, 83, 0.8);
   visibility: hidden;
   opacity: 0;
   -webkit-backface-visibility: hidden;
