--- a/dev/sass/partials/_variables.scss
+++ b/dev/sass/partials/_variables.scss
@@ -1,7 +1,7 @@
 // colors
 
 $color-1: #2e3233; // grey dark
-$color-2: #69aa6f; // green
+$color-2: $color-gold; // green
 $color-3: #e2e3df; // grey light 
 $color-4: #ffffff; // white
 
