--- a/dev/css/meta.css
+++ b/dev/css/meta.css
@@ -4027,7 +4027,7 @@ support for no js
 
 /* line 14, ../sass/_pms.scss */
 .pms {
-  height: 100%; }
+  z-index: 200; }
   /* line 16, ../sass/_pms.scss */
   .pms input {
     background-color: #eee;
