--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -558,7 +558,8 @@ a.bg-danger:focus {
 ul,
 ol {
   margin-top: 0;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  padding-left: 0px; }
   /* line 153, ../libs/bootstrap-sass/assets/stylesheets/bootstrap/_type.scss */
   ul ul,
   ul ol,
