--- a/dev/css/meta.css
+++ b/dev/css/meta.css
@@ -2804,7 +2804,7 @@ Main components
 
 /* line 85, ../sass/_navbar.scss */
 .cd-main-header {
-  background: #ffffff;
+  background: #FBFBFB;
   z-index: 3; }
   @media only screen and (max-width: 991px) {
     /* line 85, ../sass/_navbar.scss */
@@ -3219,10 +3219,14 @@ Main components
   .cd-primary-nav {
     position: static;
     margin: auto;
-    height: auto;
-    width: 80%;
+    height: 60px;
+    width: 100%;
     overflow: visible;
-    background: transparent; }
+    background: transparent;
+    padding: 0 30px;
+    text-transform: uppercase;
+    font-size: 12px;
+    background: #FBFBFB; }
     /* line 20, ../libs/bourbon/app/assets/stylesheets/addons/_clearfix.scss */
     .cd-primary-nav::after {
       clear: both;
@@ -3264,12 +3268,14 @@ Main components
         opacity: 1; }
     /* line 503, ../sass/_navbar.scss */
     .cd-primary-nav > li {
+      margin-top: -8px;
       float: left;
-      margin-left: .5em; } }
-    @media only screen and (min-width: 992px) and (min-width: 1200px) {
+      margin-left: 6.5em; } }
+    @media only screen and (min-width: 992px) and (min-width: 1200px) { 
       /* line 503, ../sass/_navbar.scss */
       .cd-primary-nav > li {
-        margin-left: 1em; } }
+        margin-top: -8px;
+      margin-left: 11.5em;} }
 @media only screen and (min-width: 992px) {
     /* line 511, ../sass/_navbar.scss */
     .cd-primary-nav > li > a {
