--- a/dev/css/meta.css
+++ b/dev/css/meta.css
@@ -2804,7 +2804,7 @@ Main components
 
 /* line 85, ../sass/_navbar.scss */
 .cd-main-header {
-  background: #ffffff;
+  background: #FBFBFB;
   z-index: 3; }
   @media only screen and (max-width: 991px) {
     /* line 85, ../sass/_navbar.scss */
