--- a/dev/sass/_header.scss
+++ b/dev/sass/_header.scss
@@ -13,7 +13,7 @@
 	text-align:center;
 	font-weight:700;
 	font-size:32px;
-	height:$header-height;
+	min-height:$header-height;
 	line-height:0.7em;
 	padding-top: $header-height*0.25;
 	display:block;
