--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -113,6 +113,12 @@ h2,.h2 {
 			font-size: 20px;
 		}
 	}
+	.rooms_price {
+    font-weight: 800;
+    font-size: 24px;
+    color: #D4AF53;
+    text-transform: none;
+}
 	.img-responsive{
 		margin: auto;
 	}
