--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -2204,53 +2204,59 @@ h2, .h2 {
     .rooms_price i {
       font-size: 20px; }
   /* line 116, ../sass/style.scss */
+  .rooms .rooms_price {
+    font-weight: 800;
+    font-size: 24px;
+    color: #D4AF53;
+    text-transform: none; }
+  /* line 122, ../sass/style.scss */
   .rooms .img-responsive {
     margin: auto; }
 
-/* line 120, ../sass/style.scss */
+/* line 126, ../sass/style.scss */
 .nomer-image {
   padding: 10px; }
 
-/* line 126, ../sass/style.scss */
+/* line 132, ../sass/style.scss */
 .features h2 {
   margin: 30px;
   font-weight: 700; }
-/* line 133, ../sass/style.scss */
+/* line 139, ../sass/style.scss */
 .features_text {
   text-align: center;
   padding: 25px; }
 
-/* line 140, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 .map-yandex {
   padding: 10px;
   height: 50vh; }
 
-/* line 143, ../sass/style.scss */
+/* line 149, ../sass/style.scss */
 .house {
   width: 100%;
   height: auto;
   max-height: 200px; }
 
-/* line 144, ../sass/style.scss */
+/* line 150, ../sass/style.scss */
 .footer {
   background-color: #212221;
   color: #fff;
   position: relative; }
-  /* line 148, ../sass/style.scss */
+  /* line 154, ../sass/style.scss */
   .footer li {
     padding: 5px; }
-    /* line 150, ../sass/style.scss */
+    /* line 156, ../sass/style.scss */
     .footer li span, .footer li a {
       padding: 5px;
       color: #999; }
-  /* line 155, ../sass/style.scss */
+  /* line 161, ../sass/style.scss */
   .footer-stack {
     padding: 10px; }
-  /* line 156, ../sass/style.scss */
+  /* line 162, ../sass/style.scss */
   .footer-hr {
     border-top: 1px solid #ccc; }
 
-/* line 159, ../sass/style.scss */
+/* line 165, ../sass/style.scss */
 .socseti, .socseti:hover, .socseti:focus {
   color: #fff;
   text-decoration: none; }
