--- a/dev/sass/_header.scss
+++ b/dev/sass/_header.scss
@@ -2,6 +2,7 @@
 	background-color:$header-color-back;
 	color:$header-color;
 	line-height:$header-height;
+	padding-bottom: 20px;
 }
 //Адрес
 .adres{
