--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -28,9 +28,12 @@ h2,.h2 {
 // SLIDER
 .slider {
 	position: relative;
+	background: url(/image/apartments/6-bed-female-dorm/fon.jpg) center top no-repeat;
+    background-size: cover;
 	&-content {
 		padding-top:100px;
 		min-height:464px;
+		
 	}
 	&-img{
 		position:absolute;
@@ -109,6 +112,7 @@ h2,.h2 {
 		font-weight: 800;
 		font-size: 24px;
 		color: $color-gold;
+		text-transform: none;
 		i {
 			font-size: 20px;
 		}
